tests/enum_from/compile_fail/field/mapping_struct_to_tuple_fields.stderr
error: Unexpected mapping to named field for tuple variant
  --> tests/enum_from/compile_fail/field/mapping_struct_to_tuple_fields.rs:15:36
   |
15 |         #[enum_from(Source::Struct.aa)] i32,
   |                                    ^^
